<resources>
    <string name="coming_soon">¡Muy pronto!</string>
    <string name="finish_order">Realiza tu compra</string>
    <string name="welcome_feed">Bienvenido ¿Qué vas a pedir hoy?</string>
    <string name="empty_cart">¡Tu carrito está vacío!</string>
    <string name="app_name">Iterepi</string>
    <string name="create_account">Crea una cuenta:</string>
    <string name="buyer">Comprador</string>
    <string name="seller">Vendedor</string>
    <string name="continue_as">Continuar como</string>
    <string name="log_in_with">Ingresar con</string>
    <string name="no_account">¿Todavía no tienes una cuenta?</string>
    <string name="register_here">Registrate aqui</string>
    <string name="login">Iniciar sesión</string>
    <string name="password">Contraseña</string>
    <string name="forgot_pass">¿Olvidaste la contraseña?</string>
    <string name="email">Correo</string>
    <string name="register_with_facebook">Registrarse con Facebook</string>
    <string name="register_with_google">Registrarse con Google</string>
    <string name="register_with_email">Registrarse con correo</string>
    <string name="name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="birth">Fecha de nacimiento</string>
    <string name="confirm_pass">Confirmar contraseña</string>
    <string name="id">Identificación</string>
    <string name="gender">Género</string>
    <string name="man">Masculino</string>
    <string name="woman">Femenino</string>
    <string name="other">Otro</string>
    <string name="phone_number">Número Celular</string>
    <string name="nit">NIT Tienda</string>
    <string name="shop_no_account">¿No tiene cuenta tu tienda?</string>
    <string name="register_shop">Registra tu tienda aqui</string>
    <string name="register">Registrar</string>
    <string name="category">Categoria</string>
    <string name="accept_terms">Acepto Términos y Condiciones</string>
    <string name="confirm_email">Confirmar correo</string>
    <string name="current_pass">Contraseña actual</string>
    <string name="recover_pass">Recuperar contraseña</string>
    <string name="recover_by">Recuperar por</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="change_pass">Cambiar contraseña</string>
    <string name="confirm_new_pass">Confirmar nueva contraseña</string>
    <string name="supermarkets">Supermercados</string>
    <string name="results">Resultados</string>
    <string name="payment_methods">Métodos de pago</string>
    <string name="my_purchases">Mis compras</string>
    <string name="recommend_to_friends">Recomendar a amigos</string>
    <string name="doubts_frequent">Dudas frecuentes</string>
    <string name="terms_and_conditions">Términos y condiciones</string>
    <string name="logout">Cerrar sesión</string>
    <string name="card_number">Número de tarjeta</string>
    <string name="expiration_date">Fecha de expiración</string>
    <string name="secure_code">Código de seguridad</string>
    <string name="owner_card">Persona titular de la tarjeta</string>
    <string name="add_card">Agregar tarjeta</string>
    <string name="cart">Canasta</string>
    <string name="purchases_history">Historial compras</string>
    <string name="products">Productos</string>
    <string name="price">Precio</string>
    <string name="quantity">Cantidad</string>
    <string name="available">Disponible</string>
    <string name="sold_out">Agotado</string>
    <string name="value">Valor:</string>
    <string name="date">Fecha</string>
    <string name="date_hour_purchase">Fecha y hora compra</string>
    <string name="date_hour_received">Fecha y hora recibido</string>
    <string name="purchase_id">Compra ID</string>
    <string name="place">Sede</string>
    <string name="pending">Pendiente</string>
    <string name="add">Agregar</string>
    <string name="add_to_basket">Agregar a la canasta</string>
    <string name="state">Estado</string>
    <string name="add_product">Agregar Producto</string>
    <string name="add_category">Agregar Categoria</string>
    <string name="add_place">Agregar Sede</string>
    <string name="update_data">Actualizar datos</string>
    <string name="update_successful">actualizacion exitosa !</string>
    <string name="description">Descripción</string>
    <string name="inventory_quantity">Cantidad de inventario</string>
    <string name="accounts">Cuentas</string>
    <string name="my_sales">Mis ventas</string>
    <string name="my_places">Mis sedes</string>
    <string name="my_categories">Mis categorias</string>
    <string name="my_items">Mis items</string>
    <string name="orders">Pedidos</string>
    <string name="order_id">Pedido ID</string>
    <string name="sale_id">Venta ID</string>
    <string name="sale_value">Valor venta</string>
    <string name="order_value">Valor del pedido</string>
    <string name="pick_up_on">Recoger en</string>
    <string name="hour">Hora</string>
    <string name="order_date">Fecha del pedido</string>
    <string name="observations">Observaciones</string>
    <string name="value_to_pay">Valor a pagar</string>
    <string name="date_hour_sale">Fecha y hora venta</string>
    <string name="date_hour_delivery">Fecha y hora entrega</string>
    <string name="client_name">Nombre del cliente</string>
    <string name="to_pick">Por recoger</string>
    <string name="picked_up">Recogido</string>
    <string name="to_deliver">Por entregar</string>
    <string name="delivered">Entregado</string>
    <string name="confirm">Confirmar</string>
    <string name="purchase_value">Valor compra</string>
    <string name="number_id">Número de identificación</string>
    <string name="select_birthday">Seleccione su fecha de nacimiento</string>
    <string name="have_account">¿Ya tienes una cuenta?</string>
    <string name="login_here">Ingresa aquí</string>
    <string name="pass_dont_match">Las contraseñas no coinciden</string>
    <string name="pass_must_contain">La contraseña debe contener letras y números</string>
    <string name="must_accept_terms">Debes aceptar los términos y condiciones para el registro</string>
    <string name="empty_field">Este campo no puede estar vacío</string>
    <string name="select_gender">Por favor seleccione su género</string>
    <string name="location">Ubicación</string>
    <string name="min_six_characters">La contraseña debe contener al menos 6 carácteres </string>
    <string name="helper_pass">Debe contener al menos 6 caracteres. Letras y números</string>
    <string name="pay">Pagar</string>
    <string name="email_dont_match">Los correos no coinciden</string>
    <string name="welcome_back">Bienvenido de nuevo</string>
    <string name="welcome">Bienvenido</string>
    <string name="forgot_something">olvidaste</string>
    <string name="restore_pass_sent">Se han enviado instrucciones a tu correo para restablecer la contraseña</string>
    <string name="sales">Ventas</string>
    <string name="empty_order">No tiene pedidos</string>
    <string name="empty_sale">No tiene ventas</string>
    <string name="sellers">Vendedores</string>
    <string name="info_updated">Su información ha sido actualizada</string>
    <string name="Open_Nav" translatable="false">Open Nav Drawer</string>
    <string name="Close_Nav" translatable="false">Close Nav Drawer</string>
    <string name="update_state">Actualizar estado</string>
    <string name="pass_changed">Se ha cambiado tu contraseña exitosamente</string>
    <string name="error_change_pass">La contraseña actual no coincide</string>
    <string name="add_photo_item">Agrega una foto a tu producto</string>
    <string name="deafault_web_client_id" translatable="false">689800102571-hsetusct9sg41bum68gdd4ral7rpl9nk.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">3476076969087122</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb3476076969087122</string>


</resources>
